<resources>
    <string name="app_name">Invele</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No</string>
    <string name="name">Name</string>
    <string name="password">Enter your Password</string>
    <string name="agree">I agree with all terms and conditions</string>
    <string name="user">Already User</string>
    <string name="user2">Already have an account</string>
    <string name="continue_button">Continue</string>
    <string name="register_with">(or) Register with</string>
    <string name="fb">Facebook</string>
    <string name="google">Google</string>
    <string name="mobile2">Enter your mobile no</string>
    <string name="otp">OTP</string>
    <string name="resend">RESEND</string>
    <string name="timer">45 Sec</string>
    <string name="login">Login</string>
    <string name="email_enter">Enter your Email ID</string>
    <string name="forgot">Forgot Password</string>
    <string name="or">or</string>
    <string name="login_sms">Login with SMS</string>
    <string name="phone_no">Phone number</string>
    <string name="sms_code">SMS Verification code</string>
    <string name="resend_code">Resend Code</string>
    <string name="new_user">New User ?  Click here</string>
    <string name="password_reset">You can reset your password here.</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_phone">Email/Phone number</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_plain">Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_home">Home</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="flash">Flash sales</string>
    <string name="flash_timer">08:20:13</string>
    <string name="view_all">View All</string>
    <string name="more">More ></string>
    <string name="health">Health</string>
    <string name="flash_item">Lenovo k6 Power (32GB, 64GB, 128GB, 264GB)</string>
    <string name="flash_rate">$500 - $1500</string>
    <string name="flash_deleted">$ 2000</string>
    <string name="rating">(5)</string>
    <string name="heart">21</string>
    <string name="trending">Trending Products</string>
    <string name="brands">Brands</string>
    <string name="under">Under 10$</string>
    <string name="mens">Men\'s Fashion</string>
    <string name="womens">Women\'s Fashion</string>
    <string name="electronics">Electronics and Mobiles</string>
    <string name="username">username</string>
    <string name="category_header">All Category</string>
    <string name="all_categories">All Categories</string>
    <string name="boys">Boys &amp; girls</string>
    <string name="mobiles">Mobiles &amp; Tablets</string>
    <string name="electronics_cat">Electronics</string>
    <string name="home">Home &amp; Living</string>
    <string name="babies">Babies &amp; Toys</string>
    <string name="health_cat">Health &amp; Sports</string>
    <string name="books">Books &amp; More</string>
    <string name="beauty">Beauty &amp; Care</string>
    <string name="formal">Formal</string>
    <string name="delete">Delete</string>
    <string name="cart_item">Jack &amp; Jones Mens Jeans</string>
    <string name="cart_rate">$500 - $5000</string>
    <string name="cart_delete_rate">$5000</string>
    <string name="cart_count">1</string>
    <string name="store_name">Store Name</string>
    <string name="cart_quantity">Quantity</string>
    <string name="total_stock">(Total Stock 32)</string>
    <string name="cart_confirm">Confirm</string>
    <string name="mens_brand">Mens Brand Jeans Fashion Casual</string>
    <string name="whishlist_header">My Wishlist(5)</string>
    <string name="overall_search">Search for Brands &amp; Products</string>
    <string name="search_every">Search Everywhere</string>
    <string name="search_nearby">Search Nearby</string>
    <string name="postal_code">Enter Area or Postal Code</string>
    <string name="search_adapter_sample_text">iphone 6s plus protector</string>
    <string name="account_header">My Account</string>
    <string name="account_name">Ajmal Ajmal</string>
    <string name="account_add_info">Add Additional Information</string>
    <string name="account_button_fitme">Update Your Fitme</string>
    <string name="my_order">My Order</string>
    <string name="view_order">View Order History</string>
    <string name="order">Orders</string>
    <string name="review">Reviews</string>
    <string name="cancel">Return/Cancel</string>
    <string name="fitme">FitMe</string>
    <string name="edit">Edit</string>
    <string name="add_profile">+ Add Profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="recent">Recently Viewed</string>
    <string name="address">Address</string>
    <string name="coupon">Coupon</string>
    <string name="help">Help Desk</string>
    <string name="contact">Contact US</string>
    <string name="settings">Settings</string>
    <string name="account_info">Account Information</string>
    <string name="address_book">Address Book</string>
    <string name="personal_info">Personal Information</string>
    <string name="social_media">Social Media Accounts</string>
    <string name="popups">Popups &amp; Notifications</string>
    <string name="account_deletion">Request Account Deletion</string>
    <string name="logout">Logout</string>
    <string name="fitme_toolbar">Fit Me</string>
    <string name="enter_name">Enter your name</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="cm">CM</string>
    <string name="inches">INCHES</string>
    <string name="shoulder">Shoulder</string>
    <string name="arm_hole">Arm Hole</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="gender">Gender</string>
    <string name="measure">Measurement</string>
    <string name="question">\?</string>
    <string name="add_mobile">Add Mobile</string>
    <string name="change_email">Change Email</string>
    <string name="change_mobile">Change Mobile Number</string>
    <string name="change_mobile_text">You can change your mobile number here.</string>
    <string name="phone_no_hint">Enter Phone Number</string>
    <string name="change_email_text">You can change your email here.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="phone_sample">+65 63801245</string>
    <string name="address_sample">#04\-482, 725 Woodlands Avenue</string>
    <string name="pincode">Singapore \- 730725</string>
    <string name="postalcode">730725</string>
    <string name="shipping">Shipping Address</string>
    <string name="billing">Billing Address</string>
    <string name="add_address">+ Add Address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="update_profile">Update Profile</string>
    <string name="recent_header">Recently Viewed</string>
    <string name="search_everywhere_header">Formal Shirts</string>
    <string name="everywhere">Everywhere</string>
    <string name="relevance">Relevance</string>
    <string name="price">Price</string>
    <string name="filter">Filter By</string>
    <string name="low">Low to High</string>
    <string name="high">High to Low</string>
    <string name="add_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="user_view">User View</string>
    <string name="product_price">$85.80 - $95.50</string>
    <string name="offer">15% OFF</string>
    <string name="product_detail_name">Apple IPhone XR 64GB ~ 128 ~ 256GB 6.1 Inch</string>
    <string name="screen_size">5.1 Inch</string>
    <string name="product_store_name">Store Name Store Name</string>
    <string name="product_desc">Product Description</string>
    <string name="product_count">989 Products</string>
    <string name="view_score">Product Description</string>
    <string name="specification">Specification</string>
    <string name="spec_category">Category</string>
    <string name="spec_brand">Brand</string>
    <string name="spec_storage">Storage</string>
    <string name="spec_ram">Ram</string>
    <string name="spec_electronics">Electronics > Mobiles</string>
    <string name="spec_apple">Apple</string>
    <string name="spec_128GB">128GB</string>
    <string name="spec_64GB">64GB</string>
    <string name="spec_32GB">32GB</string>
    <string name="spec_256GB">256GB</string>
    <string name="spec_4GB">4GB</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="voucher">Voucher</string>
    <string name="off_5">5% OFF</string>
    <string name="off_10">10% OFF</string>
    <string name="off_15">15% OFF</string>
    <string name="view_more">View More</string>
    <string name="description">Description</string>
    <string name="other_products">Other Products From Seller</string>
    <string name="helpful_count">114 people found this helpful</string>
    <string name="delay_delivery">Delay Delivery</string>
    <string name="delivery_desc">By Radha Jun 20, 2018 &amp; 08.00AM</string>
    <string name="good_service">Good Service by invele Delivery</string>
    <string name="product_rating">Product Ratings (10)</string>
    <string name="desc_explanation">iSight camera, 1.5 Pixels, Auto Focus, Focus Pixels, f/2.2 Aperture, True Tone Flash, Five-element Lens, Hybris IR Filter, Backsize Illumination Sensor, Sapphire Crystal lens Cover.</string>
    <string name="cancel_header">Cancel/Return</string>
    <string name="order_id">Order ID:</string>
    <string name="order_id_value">406–08364dl9859509</string>
    <string name="order_placed">ORDER PLACED on</string>
    <string name="order_placed_date">27 june 2018</string>
    <string name="order_item">Women Steel Quartz</string>
    <string name="order_price">Price :</string>
    <string name="order_price_value">$ 125</string>
    <string name="order_quantity">Qty :</string>
    <string name="order_quantity_value">1</string>
    <string name="support">Support</string>
    <string name="print">Print</string>
    <string name="details">Details</string>
    <string name="status">Status :</string>
    <string name="status_value">Order cancelled/Refund Initiated</string>
    <string name="order_cancel">Cancel</string>
    <string name="track_order"><u>Track Order</u></string>
    <string name="delivered">Delivered</string>
    <string name="store_pickup">Store Pickup</string>
    <string name="shipment">Shipment Details</string>
    <string name="onRequest">On Request</string>
    <string name="confirmed">confirmed</string>
    <string name="Shipping">Shipping</string>
    <string name="payment_textview">Payment</string>
    <string name="payment_unsuccessfull_textview">Payment Unsuccessful !</string>
    <string name="payment_request_textview">Please re-attempt again to complete the payment</string>
    <string name="try_again_textview">Try again</string>
    <string name="continue_shopping_textview">Continue Shopping</string>
    <string name="payment_success_greeting">Thank you Arun !</string>
    <string name="order_details_line_1">Your Order ID (ORDER ID 12655480) has been</string>
    <string name="placed_successfully_textview">placed successfully.</string>
    <string name="please_go_to_my_textview">Please go to my order</string>
    <string name="track_order_text">section to track your orders</string>
</resources>