<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_8sdp">

        <TextView
            android:id="@+id/cancel_id"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textSize="@dimen/cancel_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cancel_id_value"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_toEndOf="@+id/cancel_id"
            android:textSize="@dimen/cancel_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id_value"/>

        <TextView
            android:id="@+id/cancel_placed"
            android:layout_alignStart="@+id/cancel_id"
            android:layout_below="@+id/cancel_id"
            android:textSize="@dimen/cancel_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_placed"/>

        <TextView
            android:id="@+id/cancel_placed_date"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_toEndOf="@+id/cancel_placed"
            android:layout_alignBottom="@+id/cancel_placed"
            android:textSize="@dimen/cancel_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_placed_date"/>

        <Button
            android:id="@+id/details_button"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_24sdp"
            android:text="@string/details"
            android:background="@drawable/rounded_bgcolor_button"
            android:textSize="@dimen/cancel_text_size"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <View
            android:id="@+id/cancel_top_view"
            android:layout_below="@+id/cancel_placed_date"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/ash_color"/>

        <ImageView
            android:id="@+id/cancel_image"
            android:layout_below="@+id/cancel_top_view"
            android:layout_alignStart="@+id/cancel_id"
            android:layout_width="@dimen/_72sdp"
            android:layout_height="@dimen/_72sdp"
            android:src="@drawable/watch"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/cancel_name"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@+id/cancel_image"
            android:layout_below="@id/cancel_top_view"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_item"
            android:textSize="@dimen/cancel_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cancel_price"
            android:layout_alignStart="@+id/cancel_name"
            android:layout_below="@+id/cancel_name"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/cancel_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_price"/>

        <TextView
            android:id="@+id/cancel_price_value"
            android:layout_alignBottom="@+id/cancel_price"
            android:layout_toEndOf="@+id/cancel_price"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/cancel_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/order_price_value"/>

        <TextView
            android:id="@+id/cancel_quantity"
            android:layout_alignStart="@+id/cancel_name"
            android:layout_below="@+id/cancel_price"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/cancel_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_quantity"/>

        <TextView
            android:id="@+id/cancel_quantity_value"
            android:layout_alignBottom="@+id/cancel_quantity"
            android:layout_toEndOf="@+id/cancel_price"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/cancel_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_quantity_value"/>

        <ImageView
            android:id="@+id/cancel_support_icon"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_alignBottom="@+id/cancel_name"
            android:layout_toEndOf="@+id/cancel_name"
            android:layout_marginStart="@dimen/_28sdp"
            android:src="@drawable/support"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/cancel_support"
            android:layout_alignBottom="@+id/cancel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:layout_toEndOf="@+id/cancel_support_icon"
            android:layout_marginStart="@dimen/_4sdp"/>

        <ImageView
            android:id="@+id/cancel_print_icon"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_below="@+id/cancel_support_icon"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_alignStart="@+id/cancel_support_icon"
            android:layout_toEndOf="@+id/cancel_name"
            android:src="@drawable/print"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/print"
            android:layout_below="@+id/cancel_support_icon"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_alignStart="@+id/cancel_support"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/print"
            android:layout_toEndOf="@+id/cancel_support_icon"
            android:layout_marginStart="@dimen/_4sdp"/>

        <View
            android:id="@+id/cancel_bottom_view"
            android:layout_below="@+id/cancel_image"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/ash_color"/>

        <TextView
            android:id="@+id/cancel_status"
            android:layout_alignStart="@+id/cancel_id"
            android:layout_below="@+id/cancel_bottom_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="@dimen/cancel_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cancel_status_value"
            android:layout_alignBottom="@+id/cancel_status"
            android:layout_toEndOf="@+id/cancel_status"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/status_value"
            android:textStyle="bold"
            android:textColor="#417506"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>

    <View
        android:id="@+id/cancel_split_line"
        android:layout_below="@+id/cancel_status"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/cancel_split_line"/>


</android.support.v7.widget.CardView>