<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="payment"
            type="com.ninositsolution.inveleapp.payment.PaymentVM"/>


        <variable
            name="iPayment"
            type="com.ninositsolution.inveleapp.payment.IPayment"/>


    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            app:contentInsetStart="0dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp">

            <LinearLayout
                android:id="@+id/cart_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:background="@color/white"
                android:orientation="horizontal">

                <Space
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="match_parent" />

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="32dp"
                    android:onClick="@{()->iPayment.onBackClicked()}"
                    android:layout_gravity="center_vertical"
                    app:srcCompat="@drawable/ic_arrow_back_24dp"
                    tools:ignore="ContentDescription" />

                <Space
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/toolBarFont"
                    android:layout_gravity="center_vertical"
                    android:text="@string/payment_textview"/>


            </LinearLayout>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/cart_image"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_160sdp"
                android:layout_centerInParent="true"
                app:srcCompat = "@drawable/paymment_failure"/>


            <TextView
                android:id="@+id/payment_status_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cart_image"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"

                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/payment_unsuccessfull_textview"
                android:textSize="@dimen/_14sdp"/>


            <TextView
                android:id="@+id/payment_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/payment_status_textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:text="@string/payment_request_textview"/>


            <TextView
                android:id="@+id/try_again_tview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/payment_request"
                android:text="@string/try_again_textview"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_60sdp"/>
            
            
            <View
                android:id="@+id/payment_view"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="@dimen/_14sdp"
                android:background="@color/star_grey"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_alignBottom="@id/try_again_tview"
                android:layout_toEndOf="@id/try_again_tview"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:layout_alignBottom="@id/payment_view"
                android:layout_toEndOf="@id/payment_view"
                android:onClick="@{()->iPayment.onContinueShoppingClicked()}"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/colorPrimary"
                android:text="@string/continue_shopping_textview"/>
            


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <ImageView
                android:id="@+id/thankyou_img"
                android:layout_width="@dimen/_160sdp"
                android:layout_height="@dimen/_160sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_150sdp"
                app:srcCompat = "@drawable/thank_you"/>


            <TextView
                android:id="@+id/thank_you_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/thankyou_img"
                android:text="@string/payment_success_greeting"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_12sdp"/>


            <TextView
                android:id="@+id/order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/thank_you_textview"
                android:text="@string/order_details_line_1"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_12sdp"/>


            <TextView
                android:id="@+id/order_status_line_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order_status"
                android:text="@string/placed_successfully_textview"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:textSize="@dimen/_12sdp"/>

            <TextView
                android:id="@+id/last_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_toEndOf="@id/order_status_line_2"
                android:layout_alignBottom="@id/order_status_line_2"
                android:text="@string/please_go_to_my_textview"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_12sdp"/>


            <TextView
                android:id="@+id/track_your_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/last_textview"
                android:text="@string/track_order_text"/>




        </RelativeLayout>








    </android.support.design.widget.CoordinatorLayout>






</layout>