<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="password"
            type="com.ninositsolution.inveleapp.forgot_password.PasswordVM"/>

        <variable
            name="iPassword"
            type="com.ninositsolution.inveleapp.forgot_password.IPassword"/>



    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


    <LinearLayout
        android:id="@+id/password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="32dp"
            android:onClick="@{()->iPassword.onBackClicked()}"
            app:srcCompat="@drawable/ic_arrow_back_24dp"/>

        <Space
            android:layout_width="36dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/pass_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:textSize="22sp"
            />


    </LinearLayout>

        <View
            android:id="@+id/line_password_toolbar"
            android:layout_below="@+id/password_toolbar"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#e0e0e0"/>

        <LinearLayout
            android:id="@+id/pass_email_layout"
            android:layout_below="@+id/line_password_toolbar"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password_reset"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@android:color/black"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/forgotPasswordEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="text"
                    android:text="@={password.email}"
                    android:hint="@string/email_phone"
                    tools:ignore="Autofill" />


            </android.support.design.widget.TextInputLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="72dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:fontFamily="@font/roboto_regular"
                android:onClick="@{()->iPassword.onResetClicked()}"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:layout_gravity="center"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/pass_pass_layout"
            android:layout_below="@+id/line_password_toolbar"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/password_reset"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@android:color/black"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:inputType="text"
                android:hint="@string/password_plain"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_regular"
                android:inputType="text"
                android:hint="@string/confirm_password"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="72dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:fontFamily="@font/roboto_regular"
                android:onClick="@{()->iPassword.onSubmitClicked()}"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:layout_gravity="center"/>


        </LinearLayout>

    </RelativeLayout>

</layout>